added medicine image field
